@@ -5489,6 +5489,12 @@ rdf_version(term_t v)
 
 
 		 /*******************************
+		 *	     MORE STUFF		*
+		 *******************************/
+
+#include "quote.c"
+
+		 /*******************************
 		 *	     REGISTER		*
 		 *******************************/
 
@@ -5596,4 +5602,5 @@ install_rdf_db()
   PL_register_foreign("rdf_md5",	2, rdf_md5,	    0);
   PL_register_foreign("rdf_atom_md5",	3, rdf_atom_md5,    0);
 #endif
+  PL_register_foreign("rdf_quote_uri",	2, rdf_quote_uri,   0);
 }
